<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onBoarding.onBoardingFragment3">

    <TextView
        android:id="@+id/quick_navig"
        android:layout_width="328dp"
        android:layout_height="198dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="right|center_vertical"
        android:lineHeight="34sp"
        android:text="@string/quick_navig"
        android:textAppearance="@style/quick_navig"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/easy_paymen"
        android:layout_width="317dp"
        android:layout_height="71dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center_vertical"
        android:lineHeight="34sp"
        android:text="@string/easy_paymen"
        android:textAppearance="@style/easy_paymen"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <RelativeLayout
        android:id="@+id/button_prim"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_paymen"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/get_started"
            android:textAppearance="@style/get_started"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>